--- a/.gitignore
+++ b/.gitignore
@@ -264,7 +264,7 @@ FakesAssemblies/
 *.GhostDoc.xml
 
 # Node.js Tools for Visual Studio
-.ntvs_analysis.dat
+*.ntvs_analysis.dat
 node_modules/
 
 # Visual Studio 6 build log
@@ -285,18 +285,18 @@ node_modules/
 _Pvt_Extensions
 
 # Paket dependency manager
-.paket/paket.exe
+*.paket/paket.exe
 paket-files/
 
 # FAKE - F# Make
-.fake/
+*.fake/
 
 # JetBrains Rider
-.idea/
+*.idea/
 *.sln.iml
 
 # CodeRush
-.cr/
+*.cr/
 
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
@@ -331,4 +331,50 @@ ASALocalRun/
 *.nvuser
 
 # MFractors (Xamarin productivity tool) working folder 
-.mfractor/
+*.mfractor/
+
+# Built application files
+/*/build/
+
+# Crashlytics configuations
+com_crashlytics_export_strings.xml
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Gradle generated files
+*.gradle/
+
+# Signing files
+*.signing/
+
+# User-specific configurations
+*.idea/libraries/
+*.idea/workspace.xml
+*.idea/tasks.xml
+*.idea/*.name
+*.idea/compiler.xml
+*.idea/copyright/profiles_settings.xml
+*.idea/encodings.xml
+*.idea/misc.xml
+*.idea/modules.xml
+*.idea/scopes/scope_settings.xml
+*.idea/vcs.xml
+*.iml
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.properties
+AndroidProjects/gradlew
+*.png
+*.jar
+*.gradle
+gradlew.bat
+*.pro
